mengubah isi file berupa paragraf

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        Molestiae quibusdam molestias omnis laboriosam atque, 
+        ipsa dolor, dolore laudantium vitae iste dolores nostrum non,
+         accusamus eveniet iusto odio. Rem, eveniet fugiat.</p>
 </body>
 </html>
